--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8" >
     <title>XXX</title>
     <link type="text/css" rel="stylesheet" media="all" href="styles/main.css">
 </head>
