--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8" >
     <title>Event Page</title>
     <link type="text/css" rel="stylesheet" media="all" href="styles/main.css">
     <link type="text/css" rel="stylesheet" media="all" href="styles/event.css">
