correct content-header

--- a/draft_06_activity.html
+++ b/draft_06_activity.html
@@ -33,7 +33,7 @@
       </div>
      <div class="content">
           <div class="content-header">
-              <div class="content-header-active last"><a href="/">Страница события</a></div>
+              <div class="content-header-active last"><a href="/">что нового</a></div>
           </div>
           <div class="content-page">
               <div class="wide">
