profile.html added draft_05_calendar.html - text wrapped by <span>

--- a/draft_05_calendar.html
+++ b/draft_05_calendar.html
@@ -62,27 +62,27 @@
 
                 <div class="wide">
                     <img src="userimages/event-small0002.png">
-                    <div class="draft-event-title">Fotography by Oliver</div>
+                    <div class="draft-event-title"><span>Fotography by Oliver</span></div>
                     <div class="draft-event-text"><span> возможно, уже и не жилец в этом телевизионном мире, однако у драмы AMC, по мере приближения к финалу,продолжает расти аудитория.</span></div>
-                    <div class="draft-event-time">Today, 17:45</div>
+                    <div class="draft-event-time"><span>Today, 17:45</span></div>
                 </div>
                 <div class="wide">
                     <img src="userimages/event-small0003.png">
-                    <div class="draft-event-title">Abadoned Psyhiatric</div>
+                    <div class="draft-event-title"><span>Abadoned Psyhiatric</span></div>
                     <div class="draft-event-text"><span> возможно, уже и не жилец в этом телевизионном мире, однако у драмы AMC, по мере приближения к финалу,продолжает расти аудитория.</span></div>
-                    <div class="draft-event-time">Today, 22:32</div>
+                    <div class="draft-event-time"><span>Today, 22:32</span></div>
                 </div>
                 <div class="wide">
                     <img src="userimages/event-small0001.png">
-                    <div class="draft-event-title">Stephen Baretss photo</div>
+                    <div class="draft-event-title"><span>Stephen Baretss photo</span></div>
                     <div class="draft-event-text"><span> возможно, уже и не жилец в этом телевизионном мире, однако у драмы AMC, по мере приближения к финалу,продолжает расти аудитория.</span></div>
-                    <div class="draft-event-time">Apr 30 - May 03, 2012</div>
+                    <div class="draft-event-time"><span>Apr 30 - May 03, 2012</span></div>
                 </div>
                 <div class="wide">
                     <img src="userimages/event-small0002.png">
-                    <div class="draft-event-title">Stephen Baretss photo</div>
+                    <div class="draft-event-title"><span>Stephen Baretss photo</span></div>
                     <div class="draft-event-text"><span> возможно, уже и не жилец в этом телевизионном мире, однако у драмы AMC, по мере приближения к финалу,продолжает расти аудитория.</span></div>
-                    <div class="draft-event-time">Apr 30 - May 03, 2012</div>
+                    <div class="draft-event-time"><span>Apr 30 - May 03, 2012</span></div>
                 </div>
                 <div class="draft-events-show-more wide"><span>More</span></div>
 
